uploading trailer component created with functionality

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,22 @@
 .spin-button-none::-webkit-inner-spin-button {
   appearance: none;
 }
+
+.animate-scale {
+  transform-origin: 0% 0%;
+  animation: scale 0.2s;
+}
+
+.animate-scale-reverse {
+  transform-origin: 0% 0%;
+  animation: scale 0.2s reverse forwards;
+}
+
+@keyframes scale {
+  0% {
+    transform: scaleY(0);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
