--- a/client/src/index.css
+++ b/client/src/index.css
@@ -59,6 +59,25 @@
   animation: slideOutToRight 0.5s ease-in;
 }
 
+.animate-scale {
+  transform-origin: 0% 0%;
+  animation: scale 0.2s;
+}
+
+.animate-scale-reverse {
+  transform-origin: 0% 0%;
+  animation: scale 0.2s reverse forwards;
+}
+
+@keyframes scale {
+  0% {
+    transform: scaleY(0);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
+
 @keyframes slideInFromRight {
   from {
     transform: translateX(100%);
